@@ -1,0 +1,32 @@
+<?php
+
+/* {{{ */
+/**
+ * Mumsys_Cache_Default
+ * for MUMSYS Library for Multi User Management System (MUMSYS)
+ * ----------------------------------------------------------------------------
+ * @license LGPL Version 3 http://www.gnu.org/licenses/lgpl-3.0.txt
+ * @copyright Copyright (c) 2013 by Florian Blasel for FloWorks Company
+ * @author Florian Blasel <flobee.code@gmail.com>
+ * ----------------------------------------------------------------------------
+ * @category    Mumsys
+ * @package     Mumsys_Library
+ * @subpackage  Mumsys_Cache
+ * Created: 2013-12-10
+ */
+/* }}} */
+
+
+/**
+ * Default class for file caching
+ *
+ * @category    Mumsys
+ * @package     Mumsys_Library
+ * @subpackage  Mumsys_Cache
+ */
+class Mumsys_Cache_Default
+    extends Mumsys_Cache_File
+    implements Mumsys_Cache_Interface
+{
+
+}
